# lora_training

./: .gitignore  README.md  pyproject.toml
app/: train_lora.py
app/callbacks/: training_progress.py
app/config/: config.yaml  config_manager.py  logging_config.yaml  training_config.yaml
app/managers/: config_manager.py  dataset_manager.py  model_manager.py  training_manager.py
app/utils/: analyze_sequences.py  downloader.py  logger.py  validator.py
