[project]
name = "lora-training"
version = "0.1.0"
description = "A configurable LoRA adapter trainer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "numpy>=2.3.0",
    "peft>=0.15.2",
    "requests>=2.32.4",
    "snac>=1.2.1",
    "soundfile>=0.13.1",
    "torchaudio>=2.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
]
