[project]
name = "lora-training"
version = "0.1.0"
description = "A configurable LoRA adapter trainer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confuse>=2.0.1",
    "datasets>=3.6.0",
    "flash-attn>=2.7.4.post1",
    "librosa>=0.11.0",
    "numpy==2.2.6",
    "peft>=0.15.2",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "snac>=1.2.1",
    "soundfile>=0.13.1",
    "torchaudio>=2.7.1",
    "wandb>=0.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
]
